Set z-index to prevent image overlaps

--- a/css/quick-reply.css
+++ b/css/quick-reply.css
@@ -51,6 +51,7 @@ div.modal {
     bottom: 0px;
     padding: 20px;
     border: solid 1px #999;
+    z-index: 100;
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(255,255,255)), to(rgb(230,230,230)));
     -webkit-box-shadow: -1px -1px 12px rgba(0,0,0,0.25);
     -webkit-border-top-left-radius: 6px;
